cli/tests/testdata/run/report_error_end_of_program.ts.out
error: Uncaught Error: foo
reportError(new Error("foo"));
            ^
    at [WILDCARD]/report_error_end_of_program.ts:1:13
